<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    tools:context=".fragments.dialog.AddToDoFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <ImageView
            android:id="@+id/todoClose"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="@+id/cardView1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todoClose">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todoEt"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:hint="@string/type_your_task"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingTop="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.card.MaterialCardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/todoNextBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="52dp"
            android:src="@drawable/ic_done"
            app:civ_border_color="@color/darkBlue"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPickTime" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPickTime"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_add_time"
            app:civ_border_color="@color/darkBlue"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="@+id/cardView1"
            app:layout_constraintStart_toEndOf="@+id/editTextDate"
            app:layout_constraintTop_toBottomOf="@+id/cardView1" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/edit_data"
            android:inputType="datetime"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/ivPickTime"
            app:layout_constraintStart_toStartOf="@+id/cardView1"
            app:layout_constraintTop_toBottomOf="@+id/cardView1" />

        <TextView
            android:id="@+id/tvData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:shadowColor="@color/darkBlue"
            android:text="@string/data"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/editTextDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>